--- a/extension.toml
+++ b/extension.toml
@@ -3,5 +3,5 @@ name = "orng"
 schema_version = 1
 version = "0.0.1"
 authors = ["Matt Silverlock <orng-zed@questionable.services>"]
-description = "A set of Cloudflare themes for Zed"
+description = "A set of Cloudflare themes for Zed, with just the right amount of orange. Includes both dark & light mode themes and is designed for readability first." 
 repository = "https://github.com/elithrar/orng-zed"
